--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,13 @@
 {
   "name": "DRSS - Marketing Agency OS",
   "short_name": "DRSS",
-  "description": "Personal operating system for solo marketing agencies",
-  "start_url": "/dashboard",
+  "id": "/?source=drss-pwa",
+  "scope": "/",
+  "start_url": "/dashboard?source=pwa",
   "display": "standalone",
   "background_color": "#0A0A0A",
   "theme_color": "#FF6B6B",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "icons": [
     {
       "src": "/icon-192.png",
@@ -20,6 +21,7 @@
       "type": "image/png",
       "purpose": "any maskable"
     }
-  ]
+  ],
+  "categories": ["business", "productivity"],
+  "prefer_related_applications": false
 }
-
