--- a/savant-marketing-studio/package.json
+++ b/savant-marketing-studio/package.json
@@ -28,6 +28,7 @@
     "next": "^15.5.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.5.1",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^4.1.13"
