Fix mobile navigation + PWA setup + workspace cleanup
Mobile Navigation (Zustand):
- Replace useState with Zustand store for bulletproof state management
- Fix stuck hamburger menu - overlay click now works reliably
- Add AnimatePresence for smooth drawer animations
- Lock body scroll when menu open (position: fixed)
- Auto-close on route change, escape key, and all interactions
- Proper z-index layering (overlay: 100, drawer: 101)

PWA Implementation:
- Update manifest.json with proper theme colors and orientation
- Add viewport metadata for iOS PWA support
- Create InstallPrompt component for "Add to Home Screen"
- Update app/layout.tsx with PWA metadata and theme color
- Fix safe-area padding conflicts (moved from body to main)

Mobile Optimization:
- Fix globals.css safe-area conflicts with fixed nav
- Add proper padding-top calculation for mobile (64px + safe-area)
- Desktop padding-top: 0, mobile respects notch/home indicator

Workspace Cleanup:
- Organize all documentation into docs/ folder
- Move screenshots to docs/screenshots/
- Archive old zip files in archives/
- Remove .DS_Store system files
- Clean project structure for easier auditing

Dependencies:
- Add zustand for state management

--- a/savant-marketing-studio/public/manifest.json
+++ b/savant-marketing-studio/public/manifest.json
@@ -1,13 +1,12 @@
 {
-  "name": "DRSS - Marketing Agency OS",
+  "name": "DRSS Marketing Studio",
   "short_name": "DRSS",
-  "id": "/?source=drss-pwa",
-  "scope": "/",
-  "start_url": "/dashboard?source=pwa",
+  "description": "Internal marketing agency management system",
+  "start_url": "/dashboard",
   "display": "standalone",
-  "background_color": "#0A0A0A",
-  "theme_color": "#FF4444",
-  "orientation": "any",
+  "background_color": "#000000",
+  "theme_color": "#fb7185",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "/icon-192.png",
@@ -22,6 +21,14 @@
       "purpose": "any maskable"
     }
   ],
-  "categories": ["business", "productivity"],
+  "screenshots": [
+    {
+      "src": "/screenshot-mobile.png",
+      "sizes": "1170x2532",
+      "type": "image/png",
+      "form_factor": "narrow"
+    }
+  ],
+  "categories": ["productivity", "business"],
   "prefer_related_applications": false
 }
