--- a/savant-marketing-studio/package.json
+++ b/savant-marketing-studio/package.json
@@ -31,7 +31,8 @@
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
