--- a/savant-marketing-studio/package.json
+++ b/savant-marketing-studio/package.json
@@ -64,6 +64,7 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
