--- a/savant-marketing-studio/package.json
+++ b/savant-marketing-studio/package.json
@@ -37,12 +37,14 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
+    "mammoth": "^1.11.0",
     "next": "^15.5.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "unpdf": "^1.4.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.9"
   },
@@ -61,6 +63,7 @@
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.21.0",
