feat: wire automatic RAG retrieval into AI Chat
RAG System Integration:
- Add automatic framework retrieval on every user message in AI Chat
- searchFrameworks() now called before Claude prompt assembly
- Framework context injected with relevance scores
- Smart filtering skips RAG for greetings/short messages (<20 chars)
- Log retrieved_framework_ids to ai_executions for analytics

New Components:
- framework-suggestions.tsx: UI component showing matching frameworks
- Clickable pills with similarity % for manual framework selection

Embedding Infrastructure:
- Upgrade to 2000-dim vectors for gemini-embedding-001
- Add framework metadata support (category, description)
- Migration scripts for embedding dimension upgrade

Utility Scripts:
- generate-framework-embeddings.ts: Batch embed existing frameworks
- seed-rmbc-frameworks.ts: Seed RMBC marketing frameworks

The AI Chat now automatically retrieves relevant marketing frameworks
using vector similarity search, ensuring responses are informed by
proven copywriting methodologies like RMBC, AIDA, PAS, etc.

--- a/savant-marketing-studio/package.json
+++ b/savant-marketing-studio/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "embed-frameworks": "tsx --env-file=.env.local scripts/generate-framework-embeddings.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
